	all of the defines in the codebase

	* etc/uams/uams_dhx_pam.c: fixed DHX login using this module (last
	patch made with syslog()'s didn't include any brackets) 
	(Bug #233756)

	* distrib/initscripts/.cvsignore: removed pulling of atalk

	* configure.in, etc/uams/Makefile.am: conditional compilation support
	for PGP UAM module using --enable-pgp-uam

2001-02-26  jeff b  <jeff@univrel.pr.uconn.edu>  

	* configure.in: added /usr/local/ssl to list of SSL paths to check, to
	help kludge compilation on Mac OS X from Marcel <lammerse@xs4all.nl>

	* distrib/initscripts/rc.atalk.redhat.tmpl: adjusted to echo warning
	instead of dumping out if appletalk module not present, from
	Steven Karen <karelsf@users.sourceforge.net> (Bug #404087)

	* configure.in, contrib/timelord/timelord.c: applied patch from Wes
	Hardaker <hardaker@users.sourceforge.net> (Patch #402245), with
	suitable configure.in fixes

2001-02-23  jeff b  <jeff@univrel.pr.uconn.edu>  

	* etc/afpd/desktop.c, etc/afpd/codepage.c, etc/afpd/nls/makecode.c:
	patch from Axel Barnitzek <barney@users.sourceforge.net> to fix
	broken codepage support.

	* ChangeLog: started updaing ChangeLog with important patch/fix
	information, as it is *never* up to date.

	* configure.in, acconfig.h: implemented AFS configuration option
	patch from Wes Hardaker <hardaker@users.sourceforge.net>

	* VERSION: bumped up version to 1.5pre5, since 1.5pre4 was kind of
	paperbag-ish

	* autogen.sh: make libtoolize copy instead of linking files to
	avoid problems, thanks to Wes Hardaker <hardaker@users.sourceforge.net>

2001-02-20  jeff b  <jeff@univrel.pr.uconn.edu>

	Released 1.5pre4
	- Debian packaging in tree
	- Numerous Makefile/build fixes
	- .cvsignore implemented
	- Solaris build fixes

2001-01-02  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/uid.c, etc/afpd/uid.h, ...: added support for forcing
	uid/gid per volume for afpd

2000-09-22  Roland Schulz <rdschulz@abarrach.franken.de>
